Correction main.js +  index.html + styles.css

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
         placeholder="Search images..."
       />
       <button class="button" type="submit">Search</button>
+      <span class="loader"></span>
     </form>
 
     <ul class="gallery"></ul>
