--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section></section>
     <form class="form">
       <input
         class="input"
@@ -17,8 +16,11 @@
         placeholder="Search images..."
       />
       <button class="button" type="submit">Search</button>
-      <span class="loader"></span>
     </form>
+
+    <div class="loader-div">
+      <span class="loader is-hidden"></span>
+    </div>
 
     <ul class="gallery"></ul>
 
