--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     </form>
 
     <div class="loader-div">
-      <span class="loader is-hidden"></span>
+      <span class="loader"></span>
     </div>
 
     <ul class="gallery"></ul>
